<resources>
    <string name="app_name">Budget Bro</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">I swear!</string>
    <string name="button_read">Read me</string>
    <string name="what_message">What was it?</string>
    <string name="price_message">How much was it?</string>
    <string name="button_confirm">It\'s true</string>
    <string name="delete_option">Delete Data</string>
    <string name="dialog_confirm_message">Are you sure?</string>
    <string name="dialog_confirm_accept">Totally!</string>
    <string name="dialog_confirm_cancel">Not really..</string>
    <string name="delete_data">Delete Data</string>
    <string name="modify_data">Modify Data</string>
    <string name="go_to_main">Go to Main</string>
    <string-array name="wasteType">
        <item>Techno</item>
        <item>Food</item>
        <item>Transport</item>
        <item>Music</item>
        <item>Sports</item>
        <item>Travel</item>
        <item>Learning</item>
        <item>For Fun</item>
        <item>Others</item>
    </string-array>
    <string name="tot_message">Total</string>
    <string name="notSel">Nothing to confess!!!</string>
    <string name="notDigit">Price should be digit!</string>
    <string name="elementID">Which element? (ID number)</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="change_date">Change Date?</string>
    <string name="change_category">Change Category?</string>
    <string name="all_good">All Good!</string>
</resources>
